--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "types": "bindings/node",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ASoldo/tree-sitter-uxn"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "node-gyp-build",
